--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     font-family: sans-serif;
     color: var(--color-texto-principal);
     background-color: var(--color-fondo-pagina);
+    line-height: 1.5;
   }
 
   .contenedor-principal {
@@ -96,6 +97,7 @@
     outline: 1px solid var(--color-primario-claro);
     border-radius: 12px;
     padding: 16px;
+    text-align: center;
   }
 
   .figura-centrada {
